comments can be updated with the by inputing in the input form dealing with bug of spacing for input and submit button

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -19,4 +19,5 @@
 
 .like-button-container {
     display: flex;
+    flex-direction:row;
 }
